# decentralized_messenger

./: README.md  crypto_utils.py  location_manager.py  main.py  message_protocol.py  p2p_sim.py  user_manager.py
decentralized_messenger_app/: README.md  pubspec.yaml
decentralized_messenger_app/android/app/src/main/kotlin/com/example/decentralized_messenger_app/: MainActivity.kt
decentralized_messenger_app/decentralized_messenger_core/: Cargo.toml
decentralized_messenger_app/decentralized_messenger_core/src/: lib.rs
decentralized_messenger_app/lib/: ffi_bridge.dart  main.dart
