[package]
name = "decentralized_messenger_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"] # For dynamic and static linking

[dependencies]
rand = "0.8" # For random ID generation
hex = "0.4" # For hex encoding/decoding IDs
serde = { version = "1.0", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0"
rsa = { version = "0.9", features = ["serde"] } # For RSA encryption
aes-gcm = "0.10" # For AES encryption
base64 = "0.21" # For base64 encoding
# For FFI (Foreign Function Interface)
libc = "0.2"
# For AES IV
rand_core = { version = "0.6", features = ["std"] }
# For AES key generation
getrandom = "0.2"
